[package]
name = "mtc"
version = "1.1.0"
edition = "2018"
license = "MIT"

[lib]
name = "mtc"

[[bin]]
name = "mtc"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ssh2 = { version = "0.9" }
serde_json = "1.0"
dirs = "4.0"
rpassword = "5.0"
