[package]
name = "mtc"
version = "1.3.0"
edition = "2018"
license = "MIT"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
ssh2 = { version = "0.9" }
serde_json = { version = "1.0" }

dirs = { version = "4.0", optional = true }
rpassword = { version = "5.0", optional = true }

[features]
bin = ["dirs", "rpassword"]

[lib]
name = "mtc"

[[bin]]
name = "mtc"
path = "src/main.rs"
required-features = ["bin"]

